Stop scrolling in overflow horizontally

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 html, :host {
   font-family: var(--default-font-family, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji");
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
